wip: add more route descriptions in swagger
